# LabPOO2

./: README.md
Lab1/: README.md  main.py  modulo_a.py  modulo_b.py  modulo_c.py
Lab2/: README.md  cadenas_util.py  main.py  notas.txt
Lab3/: README.md  main.py  pyproject.toml
Lab3/src/: operaciones.py
Lab4/: README.md  analisis_duckdb.py  analisis_pandas.py  main.py
Lab4/data/: productos.csv
Lab4/resumen/: duckdb_resumen.csv  pandas_resumen.csv
Lab5/: README.md  main.py
Lab5/parte_a/: calculadora.py  test_calculadora.py
Lab5/parte_b/: productos.csv  test_validacion_csv.py
Proyecto/: requirements.txt
Proyecto/pipeline_covid/: README.md  pyproject.toml  setup.cfg  setup.py
Proyecto/pipeline_covid/.tmp_dagster_home_54swyw4u/history/: runs.db
Proyecto/pipeline_covid/.tmp_dagster_home_54swyw4u/history/runs/: e7c84978-5f93-4427-8fc3-8aedf532b963.db  index.db
Proyecto/pipeline_covid/.tmp_dagster_home_54swyw4u/schedules/: schedules.db
Proyecto/pipeline_covid/.tmp_dagster_home_54swyw4u/storage/: datos_procesados  metrica_factor_crec_7d  metrica_incidencia_7d
Proyecto/pipeline_covid/outputs/: reporte_covid_final.xlsx
Proyecto/pipeline_covid/pipeline_covid/: assets.py  definitions.py  leer_datos.py
