[project]
name = "pipeline_covid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "pipeline_covid.definitions"
code_location_name = "pipeline_covid"

[tool.setuptools.packages.find]
exclude=["pipeline_covid_tests"]
